--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr. Deepthi K J</h3>
-                <p></p>
+                <p>Associate Professor, NITTE Institute of Speech and Hearing</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -167,7 +167,9 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Vidya Ramkumar</h3>
-                <p>Associate Professor, SRIHER</p>
+                <p>DBT/Welcome Trust India Alliance Intermediate Fellow in Clinical and Public Health Reasearch
+                  Associate Profesor
+                  Department of SLHS, SRIHER, Chennai</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -599,7 +601,8 @@
   <div class="container" data-aos="fade-up">
     <div class="section-header">
       <h2>Call for Papers</h2>
-      <p>Interested canidates can submit their research paper on both orginal work as well as previously published work.</p>
+      <p>Interested candidates can submit their research paper here. One paper each from Speech, Audiology and Language will be awarded the best paper.</p>
+      <p>Guidelines for submitting scientific paper:<a href="/downloads/Sceintific paper guidlines.pdf" download>Click here </a></a></p>
        <br>
        <div class="text-center">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSe6r8qj4Xn_pbSWgFCRrKes2hGwdrjhpmhTDFaC0XWmDr_WPw/viewform" target="_blank"><button type="button" class="btn ">Submit your paper</button></a>
