--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Vidya Ramkumar</h3>
-                <p>DBT/Welcome Trust India Alliance Intermediate Fellow in Clinical and Public Health Reasearch
-                  Associate Profesor
+                <p>DBT/Welcome Trust India Alliance Intermediate Fellow in Clinical and Public Health Research
+                  Associate Professor
                   Department of SLHS, SRIHER, Chennai</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
