--- a/index.html
+++ b/index.html
@@ -584,6 +584,8 @@
             <hr>
             <div class="text-center">
               <a href="https://www.nish.ac.in/online-payment/conference-payment" target="_blank">  <button type="button" class="btn">Make your Payment </button></a>
+            </div>
+            <div class="text-center">
               <a href="https://docs.google.com/forms/d/e/1FAIpQLSfLe-6sHOj4tMhEJZ3NwrQTbxB3tfiBAbh-oiYWP9njaJHQRg/viewform" target="_blank">  <button type="button" class="btn">Register Now  </button></a>
             </div>
 
