--- a/index.html
+++ b/index.html
@@ -544,15 +544,15 @@
             <h4>Offline</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>registration fee for 3 days -2000Rs</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> perday registration fee-750Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -2000Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Perday registration fee-750Rs/day</li>
              </ul>
             <hr>
             <h4>Online</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>registration fee for 3 days -1000Rs</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> perday registration fee -350Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -1000Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Perday registration fee -350Rs/day</li>
             </ul>
             <hr>
             <div class="text-center">
@@ -570,16 +570,16 @@
             <h4>Offline</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>registration fee for 3 days with/without CRE points -3500Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days with/without CRE points -3500Rs</li>
              
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>  perday registration fee - 1500Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>  Perday registration fee - 1500Rs/day</li>
              </ul>
             <hr>
             <h4>Online</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> registration fee for 3 days -2000Rs</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> perday registration fee - 750Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Registration fee for 3 days -2000Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Perday registration fee - 750Rs/day</li>
             </ul>
             <hr>
             <div class="text-center">
