--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Prof. M. Pushpavathi</h3>
-                <p>Director All India Institute of Speech & Hearing Mansagangothri, Mysuru </p>
+                <p>Director All India Institute of Speech & Hearing, Mysuru </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -115,7 +115,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 2" class="img-fluid" >
               <div class="details">
                 <h3>Dr. Aparna V S</h3>
-                <p>Consultant SLP, Smile Train CLC Bhagwan Mahaveer Jain Hospital Bangalore </p>
+                <p>Consultant SLP, Smile Train CLC Bhagwan Mahaveer Jain Hospital, Bangalore </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -128,7 +128,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr. Deepthi K J</h3>
-                <p>Associate Professor Nitte Institute of Speech & Hearing Mangalore </p>
+                <p>Associate Professor, Nitte Institute of Speech & Hearing, Mangalore </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -180,7 +180,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Loganathan Guruswamy</h3>
-                <p>Director Therapy India Mumbai </p>
+                <p>Director Therapy India, Mumbai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -193,7 +193,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Vidya Ramkumar</h3>
-                <p>Associate Professor Department of Speech Language & Hearing Sciences Sri Ramachandra Institute of Higher Education & Research (SRIHER) Chennai </p>
+                <p>Associate Professor Department of Speech Language & Hearing Sciences Sri Ramachandra Institute of Higher Education & Research (SRIHER), Chennai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -205,7 +205,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Chitra Thadathil</h3>
+                <h3>Ms Chitra Thadathil</h3>
                 <p>Dimensions Center for Child Development Kalyan Nagar, Bangalore </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -219,7 +219,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Ms Carla Sumesh</h3>
-                <p>Al Noor training center for PwD Dubai </p>
+                <p>Teaching Program coordinator, Al Noor training center for PwD, Dubai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -246,7 +246,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Sonal Chitnis</h3>
-                <p>Assistant Professor, School of Audiology & Speech Language Pathology Bharati Vidyapeeth Medical College Pune </p>
+                <p>Assistant Professor, School of Audiology & Speech Language Pathology, Bharati Vidyapeeth Medical College, Pune </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
