--- a/index.html
+++ b/index.html
@@ -89,6 +89,62 @@
       </div>
     </section><!-- End About Section -->
 
+
+<section id="test" class="section-bg">
+  <div class="container" data-aos="fade-up">
+     <div class="section-header">
+          <h2>AIM</h2>
+          <p>The International Conference on Communication Disorders and Audiological Practices (ICCAP) is dedicated towards bringing together leading academicians, researchers, professionals and students from the field of communication disorders to discuss innovative ideas, exchange information and disseminate knowledge on novel issues and breakthroughs in evidence-based clinical practice.</p>
+        </div> 
+
+        </div>
+    </section>
+
+
+
+<section id="test" class="section-bg">
+  <div class="container" data-aos="fade-up">
+     <div class="section-header">
+          <h2>Objectives</h2>
+          <ul>
+            <li>To provide a solid platform to share novel ideas through  seminars and scientific paper presentations. </li>
+            <li>To provide an opportunity to enhance and share skills through discussions.</li>
+          </ul>
+        </div> 
+
+        </div>
+    </section>
+
+  <section id="test" class="section-bg">
+  <div class="container" data-aos="fade-up">
+     <div class="section-header">
+          <h2>Desired outcome</h2>
+          <p>At the end of the conference, the participants would be able to</p>
+          <ul>
+            <li>Develop a multidimensional perspective on cleft lip and palate.</li>
+            <li>Have integrative insights on neuromotor disorders.</li>
+            <li>Have a better understanding of aural habilitation based on the ICF-CY framework.</li>
+            <li>Recognise challenges in clinical audiological practises.</li>
+            <li>Augment knowledge on the identification and management of sensory issues, and management of problematic sexual behaviours in individuals with ASD.</li>
+            <li>Have a deeper grasp on the intervention of neurogenic language disorders in adults.</li>
+          </ul>
+
+
+
+        </div> 
+
+
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
     <!-- ======= Speakers Section ======= -->
     <section id="speakers">
       <div class="container" data-aos="fade-up">
