--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <h1 class="mb-4 pb-0">International Conference on<br> Communication Disorders and Audiological Practices</h1>
       <p class="mb-4 pb-0">National Institute of Speech and Hearing</p>
       <a href="https://www.youtube.com/embed/ro8krrYwF-E?controls=0" class="glightbox play-btn mb-4"></a>
+      <p id="demo" ></p> 
       </div>
   </section><!-- End Hero Section -->
 
@@ -341,7 +342,7 @@
           </div>
 
 
-         
+
       <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
@@ -1017,7 +1018,36 @@
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script>
+// Set the date we're counting down to
+var countDownDate = new Date("September  15, 2022 00:08:30").getTime();
 
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
 </body>
 
 </html>
