--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name ="description " content="ICCAP-2022 is an upcoming conference aimed exclusively towards evidence based clinical practices in Audiology and Communication Disorders">
   <meta name="keywords" content="Audiology, Communication Disorders , Communication Disorders conference 2022,ICCAP 2022,ICCAP2022"/>
   <meta name="author" content="Bootstrapmade">
-  <meta http-equiv="refresh" content="30">
+  
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -160,7 +160,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Prof. M. Pushpavathi</h3>
-                <p>Director All India Institute of Speech & Hearing, Mysuru </p>
+                <p>Director, All India Institute of Speech & Hearing, Mysuru </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
