--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr James Hall III</h3>
-                <p>Professor in Audiology ,University of Pretoria Salus University ,University of Hawaii</p>
+                <p>Professor in Audiology, University of Pretoria Salus University, University of Hawaii</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -233,7 +233,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Loganathan Guruswamy</h3>
-                <p>Director Therapy India, Mumbai </p>
+                <p>Director, Therapy India, Mumbai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -246,7 +246,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Vidya Ramkumar</h3>
-                <p>Associate Professor Department of Speech Language & Hearing Sciences Sri Ramachandra Institute of Higher Education & Research (SRIHER), Chennai </p>
+                <p>Associate Professor, Department of Speech Language & Hearing Sciences, SRIHER, Chennai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -287,7 +287,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Dr Mili Kuruvilla-Dugdale</h3>
-                <p>Associate Professor Speech Language & Hearing Sciences University of Missouri, Columbia </p>
+                <p>Associate Professor, Speech Language & Hearing Sciences University of Missouri, Columbia </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -301,7 +301,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Ms Chitra Thadathil</h3>
-                <p>Dimensions Center for Child Development Kalyan Nagar, Bangalore </p>
+                <p>Director, Dimensions Center for Child Development, Bangalore </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -317,7 +317,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Ms Sonal Chitnis</h3>
-                <p>Assistant Professor, School of Audiology & Speech Language Pathology, Bharati Vidyapeeth Medical College, Pune </p>
+                <p>Assistant Professor, School of Audiology & Speech Language Pathology, BVMC, Pune </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -369,7 +369,7 @@
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Ms. Ankita Bhutada</h3>
-                <p>Graduate Research Assistant Department of Speech-Pathology & Audiology University of South Alabama </p>
+                <p>Graduate Research Assistant,  Department of Speech-Pathology & Audiology, University of South Alabama </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -599,7 +599,7 @@
               </div>
             </div>
             <div class="row schedule-item">
-              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in adults</h4></div>
+              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in dults</h4></div>
                                      
               </div>
               <div class="row schedule-item">
@@ -1039,8 +1039,8 @@ var x = setInterval(function() {
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
   // Display the result in the element with id="demo"
-  document.getElementById("countdown").innerHTML = '<span class="days">' + days +  ' <label>Days</label></span> <span class="hours">' + hours + ' <label>Hours</label></span> <span class="minutes">'
-    + minutes + ' <label>Minutes</label></span> <span class="seconds">' + seconds + ' <label>Seconds</label></span>'; 
+  document.getElementById("countdown").innerHTML = '<span class="days">' + days +  ' <label>Days</label></span> <span class="hours">' + hours + ' <label>Hrs</label></span> <span class="minutes">'
+    + minutes + ' <label>Min</label></span> <span class="seconds">' + seconds + ' <label>Sec</label></span>'; 
 
   // If the count down is finished, write some text
   if (distance < 0) {
