--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
             <div class="row schedule-item">
               <div class="col-md-2"><time>Session 3</time></div>
               <div class="col-md-10">
-                <h4>Feeding in Cleft Lip and Palate: An emerging expertise for Speech Language Pathologist<./h4>
+                <h4>Feeding in Cleft Lip and Palate: An emerging expertise for Speech Language Pathologist</h4>
                 <p></p>
               </div>
             </div>
