--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0">International Conference on<br> Communication Disorders and Audiological Practices</h1>
-      <p class="mb-4 pb-0">National Institute of Speech and Hearing</p>
+      <p class="mb-4 pb-0">National Institute of Speech & Hearing</p>
       <a href="https://www.youtube.com/embed/ro8krrYwF-E?controls=0" class="glightbox play-btn mb-4"></a>
       <div id="countdown"></div>
       </div>
@@ -84,7 +84,7 @@
            </div>
           <div class="col-lg-3">
             <h2>When</h2>
-            <p>15-17 Spetember 2022 <br> Thursday  to Saturday </p>
+            <p>15-17 September 2022 <br> Thursday  to Saturday </p>
           </div>
         </div>
       </div>
@@ -160,8 +160,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Rangasayee</h3>
-                <p>Director (Technical), Dr. S.R. Chandrasekhar Institute of Speech and Hearing Hennur Road, Bangalore Ex-Director, AYJNISHD, MSJ&E, Govt of India.</p>
+                <h3>Prof. Rangasayee</h3>
+                <p>Senior ASLP, Ex-Director, AYJNIHH, Ex-Director (Technical) & Prof SRCISH, Bangalore.</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -192,7 +192,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr James Hall III</h3>
+                <h3>Dr James W .Hall III, PhD. ABA certified </h3>
                 <p>Professor in Audiology, University of Pretoria Salus University, University of Hawaii</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -599,7 +599,7 @@
               </div>
             </div>
             <div class="row schedule-item">
-              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in dults</h4></div>
+              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in adult</h4></div>
                                      
               </div>
               <div class="row schedule-item">
@@ -655,7 +655,7 @@
 
     <div class="section-header">
       <h2>Registration</h2>
-      <p style="color: navy"><b>Target Particpants :  audiologists, speech language Pathologist, UG/PG students ( ASLP) </b></p>
+      <p style="color: navy"><b>Target Participants  :  Audiologists, Speech Language Pathologist, UG/PG students ( ASLP) </b></p>
     </div>
     <div class="row">
       <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -665,7 +665,7 @@
             <h4>Offline</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -2000Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days - &#8377;2000</li>
               <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee-750Rs/day</li>
              </ul>
             <hr>
@@ -930,7 +930,7 @@
             <div class="contact-address">
               <i class="bi bi-geo-alt"></i>
               <h3>Address</h3>
-              <address>National Institute of Speech and Hearing ,NISH Rd, Aakkulam, Thiruvananthapuram, Kerala 695017</address>
+              <address>National Institute of Speech & Hearing, NISH Rd, Aakkulam, Thiruvananthapuram, Kerala 695017</address>
             </div>
           </div>
 
