--- a/index.html
+++ b/index.html
@@ -666,14 +666,14 @@
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days - &#8377;2000</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee-750Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee-&#8377;750/day</li>
              </ul>
             <hr>
             <h4>Online</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -1000Rs</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee -350Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -&#8377;1000</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee -3&#8377;50/day</li>
             </ul>
             <hr>
             <div class="text-center">
@@ -693,16 +693,16 @@
             <h4>Offline</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days with/without CRE points -3500Rs</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days with/without CRE points -&#8377;3500</li>
              
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>  Per day registration fee - 1500Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span>  Per day registration fee - &#8377;1500</li>
              </ul>
             <hr>
             <h4>Online</h4>
             <hr>
             <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> Registration fee for 3 days -2000Rs</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee - 750Rs/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Registration fee for 3 days -&#8377;2000</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee - &#8377;750</li>
             </ul>
             <hr>
             <div class="text-center">
