--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
               </div>
             </div>
             <div class="row schedule-item">
-              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in adult</h4></div>
+              <div class="col-md-12"> <h4>Theme:Revisiting intervention in neurogenic language disorders in adults</h4></div>
                                      
               </div>
               <div class="row schedule-item">
@@ -673,7 +673,7 @@
             <hr>
             <ul class="fa-ul">
               <li><span class="fa-li"><i class="fa fa-check"></i></span>Registration fee for 3 days -&#8377;1000</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee -3&#8377;50/day</li>
+              <li><span class="fa-li"><i class="fa fa-check"></i></span> Per day registration fee -&#8377;350</li>
             </ul>
             <hr>
             <div class="text-center">
