--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
 
 <body>
 
+
+<div class="fixed-bar "> 
+<div class="blink"><span class="blinking"> RCI CRE Status Awaiting </span></div>
+</div>
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
