--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name ="description " content="ICCAP-2022 is an upcoming conference aimed exclusively towards evidence based clinical practices in Audiology and Communication Disorders">
   <meta name="keywords" content="Audiology, Communication Disorders , Communication Disorders conference 2022,ICCAP 2022,ICCAP2022"/>
   <meta name="author" content="Bootstrapmade">
+  <meta name="google-site-verification" content="_ddAEZPet7Kt244-GzX1kurrZVvIP0TJ_WEWRlEVmYU" />
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
