--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name ="description " content="ICCAP-2022 is an upcoming conference aimed exclusively towards evidence based clinical practices in Audiology and Communication Disorders">
   <meta name="keywords" content="Audiology, Communication Disorders , Communication Disorders conference 2022,ICCAP 2022,ICCAP2022"/>
   <meta name="author" content="Bootstrapmade">
-  <meta name="google-site-verification" content="_ddAEZPet7Kt244-GzX1kurrZVvIP0TJ_WEWRlEVmYU" />
+  <meta name="google-site-verification" content="_ddAEZPet7Kt244-GzX1kurrZVvIP0TJ_WEWRlEVmYU"/>
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -501,7 +501,7 @@
              <div class="row schedule-item">
               <div class="col-md-2"><time>Session 7</time></div>
               <div class="col-md-10">
-                     <h4>Speech aspects of neuromotor disorders</h4>
+                     <h4>Advancing the assessment and Management of Prograssive Dysarthria </h4>
                 <p></p>
               </div>
             </div>
