--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Prof. Rangasayee</h3>
-                <p>Senior ASLP, Ex-Director, AYJNIHH, Ex-Director (Technical) & Prof SRCISH, Bangalore.</p>
+                <h3>Prof. R Rangasayee</h3>
+                <p>Distinguished Academician and Researcher, Ex-Director, AYJNIHH, Ex-Director (Technical) & Prof SRCISH, Bangalore.</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
                 </div>
@@ -175,9 +175,31 @@
           </div>
        
 
+<div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
+              <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
+              <div class="details">
+                <h3>Prof. James W .Hall III, PhD. ABA certified </h3>
+                <p>Professor in Audiology, University of Pretoria Salus University, University of Hawaii</p>
+                <div class="social">
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
-
-
+<div class="col-lg-4 col-md-6">
+            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
+              <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
+              <div class="details">
+                <h3>Prof. Lata A. Krishnan</h3>
+                <p>Clinical Professor Emerita, Purdue University, USA</p>
+                <div class="social">
+                    <a href=""><i class="bi bi-linkedin"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
@@ -193,24 +215,13 @@
           </div>
         
 
-<div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
-              <div class="details">
-                <h3>Dr James W .Hall III, PhD. ABA certified </h3>
-                <p>Professor in Audiology, University of Pretoria Salus University, University of Hawaii</p>
-                <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
+
 
          <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Carmen Pamplona</h3>
+                <h3>Dr. Carmen Pamplona</h3>
                 <p>Cleft Palate Clinic of the Hospital Gea Gonzalez, Mexico City </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -219,25 +230,14 @@
             </div>
           </div>
 
- <div class="col-lg-4 col-md-6">
-            <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
-              <div class="details">
-                <h3>Dr Lata A. Krishnan</h3>
-                <p>Clinical Professor Emerita, Purdue University, USA</p>
-                <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
+ 
 
 
            <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Loganathan Guruswamy</h3>
+                <h3>Dr. Loganathan Guruswamy</h3>
                 <p>Director, Therapy India, Mumbai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -250,7 +250,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Vidya Ramkumar</h3>
+                <h3>Dr. Vidya Ramkumar</h3>
                 <p>Associate Professor, Department of Speech Language & Hearing Sciences, SRIHER, Chennai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -277,7 +277,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Ms Carla Sumesh</h3>
+                <h3>Ms. Carla Sumesh</h3>
                 <p>Teaching Program coordinator, Al Noor training center for PwD, Dubai </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -291,7 +291,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Mili Kuruvilla-Dugdale</h3>
+                <h3>Dr. Mili Kuruvilla-Dugdale</h3>
                 <p>Associate Professor, Speech Language & Hearing Sciences University of Missouri, Columbia </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -305,7 +305,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Ms Chitra Thadathil</h3>
+                <h3>Ms. Chitra Thadathil</h3>
                 <p>Director, Dimensions Center for Child Development, Bangalore </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -321,7 +321,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Ms Sonal Chitnis</h3>
+                <h3>Ms. Sonal Chitnis</h3>
                 <p>Assistant Professor, School of Audiology & Speech Language Pathology, BVMC, Pune </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -360,7 +360,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Dr Bhanumathi</h3>
+                <h3>Dr. Bhanumathi N</h3>
                 <p>Associate Professor, Department of Otolaryngology PGIMER, Chandigarh </p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -426,7 +426,7 @@
               <div class="col-md-10">
                 <h4>Registration</h4>
                 <div class="col-md-10">
-                  <h4>Keynote <span></span></h4>
+                  <h4>Keynote address<span></span></h4>
                 </div>
               </div>
             </div>
@@ -455,14 +455,14 @@
             <div class="row schedule-item">
               <div class="col-md-2"><time>Session 3</time></div>
               <div class="col-md-10">
-                <h4>Whole Language model for intervention in CLP : crossing boundaries to telepractice as well.</h4>
+                <h4>Feeding in Cleft Lip and Palate: An emerging expertise for Speech Language Pathologist.</h4>
                 <p></p>
               </div>
             </div>
 <div class="row schedule-item">
               <div class="col-md-2"><time>Session 4</time></div>
               <div class="col-md-10">
-                <h4>Feeding in Cleft Lip and Palate: An emerging expertise for Speech Language Pathologist.</h4>
+                <h4>Whole Language model for intervention in CLP : crossing boundaries to telepractice as well.</h4>
                 <p></p>
               </div>
             </div>
