--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
           <div class="col-lg-3">
             <h2>Where</h2>
-            <p><b>Offline</b> <br>Marigold Auditorium <br> National Institute of Speech and Hearing </p>
+            <p><b>Offline</b> <br>Marigold Auditorium <br> National Institute of Speech & Hearing </p>
             <p><b>Online</b><br>Zoom Platform</p>
            </div>
           <div class="col-lg-3">
@@ -645,7 +645,7 @@
           <div class="col-lg-6 venue-info">
             <div class="row justify-content-center">
               <div class="col-11 col-lg-8 position-relative">
-                <h3>Marigold Auditorium <br> National Institute of Speech and Hearing  </h3>
+                <h3>Marigold Auditorium <br> National Institute of Speech &  Hearing  </h3>
                 <p><b>Organized By:</b> <br>Department of Audiology and Speech Language Pathology <br> Department of Neurodevelopmental Sciences </p>
                     </div>
             </div>
