--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
 
 <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
+              <img src="assets/img/speakers/rangasayee.jpg" alt="Speaker 1" class="img-fluid" >
               <div class="details">
                 <h3>Prof. R Rangasayee</h3>
-                <p>Distinguished Academician and Researcher, Ex-Director, AYJNIHH, Ex-Director (Technical) & Prof SRCISH, Bangalore.</p>
                 <div class="social">
-                    <a href=""><i class="bi bi-linkedin"></i></a>
+                    <p>Distinguished Academician and Researcher, Ex-Director, AYJNIHH, Ex-Director (Technical) & Prof SRCISH, Bangalore.</p>
                 </div>
               </div>
             </div>
@@ -179,7 +178,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/speakers/speaker.png" alt="Speaker 1" class="img-fluid" >
               <div class="details">
-                <h3>Prof. James W .Hall III, PhD. ABA certified </h3>
+                <h3>Prof. James W .Hall III</h3>
                 <p>Professor in Audiology, University of Pretoria Salus University, University of Hawaii</p>
                 <div class="social">
                     <a href=""><i class="bi bi-linkedin"></i></a>
@@ -960,6 +959,43 @@
       </div>
     </section><!-- End Contact Section -->
 
+  <section id="sponsers" class="section-bg">
+
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>Organisers </h2>
+           </div>
+        <div class="row contact-info">
+
+          <div class="col-md-4">
+            <div class="contact-address">
+              <img src="assets/img/gov.png">
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-phone">
+              <img src="assets/img/sjdlogo.png" >
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-email">
+              <img src="assets/img/nishlogo.png" >
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Contact Section -->
+
+
+
+
+
+
+
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
@@ -999,9 +1035,6 @@
               <strong>Phone:</strong>+917558007444<br>
               <strong>Email:</strong>iccap@nish.ac.in<br>
             </p>
-
-            
-
           </div>
 
         </div>
@@ -1013,10 +1046,8 @@
         &copy; Copyright <strong>NISH</strong>.All Rights Reserved
       </div>
     </div>
-  </footer><!-- End  Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
+  </footer>
+  <!-- End  Footer -->
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
