cre status awaiting

--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
       <a class="buy-tickets scrollto" href="#buy-tickets">Registration</a>
-
     </div>
+    <div class="fixed-bar "> 
+<div class="blink"><span class="blinking"> RCI CRE Status Awaiting </span></div>
+</div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
@@ -788,17 +790,17 @@
   <tbody>
     <tr>
       <td>Last date of submission of abstract</td>
-      <td>30.07.2022</td>
+      <td>30 July 2022</td>
     </tr>
     <tr>
      
       <td>Acceptance and Invitation to submit manuscripts</td>
-      <td>19.08.2022</td>
+      <td>19 August 2022</td>
      
     </tr>
     <tr>
        <td>Last date for the receipt of full length manuscript</td>
-       <td>T31.08.2022</td>
+       <td>31 August 2022</td>
     </tr>
   </tbody>
 </table>
