--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
 <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/milli.jpg" alt="Dr. Mili Kuruvilla-Dugdale" class="img-fluid" >
+              <img src="assets/img/speakers/mili.jpg" alt="Dr. Mili Kuruvilla-Dugdale" class="img-fluid" >
               <div class="details">
                 <h3>Dr. Mili Kuruvilla-Dugdale</h3>
                 
@@ -528,7 +528,7 @@
               <div class="col-md-2"><time>Session 7</time></div>
               <div class="col-md-10">
                 <div class="speaker">
-                  <img src="assets/img/speakers/mili.jpg" alt="Dr Loganathan Guruswamy">
+                  <img src="assets/img/speakers/mili.jpg" alt="Dr. Mili Kuruvilla-Dugdale">
                 </div>
                      <h4>Advancing the Assessment and Management of Prograssive Dysarthria </h4>
                 <p>Dr. Mili Kuruvilla-Dugdale</p>
