--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <a class="buy-tickets scrollto" href="#buy-tickets">Registration</a>
     </div>
     <div class="fixed-bar "> 
-<div class="blink"><span class="blinking"> RCI CRE Status Awaiting </span></div>
+<div class="blink"><span class="blinking"> RCI CRE Status Approved </span></div>
 </div>
   </header><!-- End Header -->
 
@@ -275,7 +275,7 @@
 
  <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
-              <img src="assets/img/speakers/speaker.png" alt="Ms. Carla Sumesh" class="img-fluid" >
+              <img src="assets/img/speakers/Carla.jpg" alt="Ms. Carla Sumesh" class="img-fluid" >
               <div class="details">
                 <h3>Ms. Carla Sumesh</h3>
                
@@ -637,6 +637,9 @@
             <div class="row schedule-item">
               <div class="col-md-2"><time>Session 2</time></div>
               <div class="col-md-10">
+                <div class="speaker">
+                  <img src="assets/img/speakers/Carla.jpg" alt="Ms. Carla Sumesh">
+                </div>
                   <h4>Managing the Problematic Sexual Behaviors in Individuals with Autism Spectrum Disorders
                   </h4>
                 <p>Ms. Carla Sumesh</p>
